<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="75dp"/>

    <TextView
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:hint="@string/email_address"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="31dp"
        android:textAllCaps="false"
        android:background="@drawable/drawable_spinner_background"/>

    <Button android:id="@+id/buttonConfirm"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:text="@string/butt_confirm"
        android:textAllCaps="true"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:text="@string/description"
        android:lines="3"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="16dp"/>

</LinearLayout>