<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <ImageView android:id="@+id/imageViewB"
        android:layout_width="102dp"
        android:layout_height="76dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/buildings" />

    <TextView android:id="@+id/textViewTasks"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="50dp"
        android:text="@string/image_5_tasks"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:gravity="center"/>

    <TextView android:id="@+id/textViewTitle"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/build_name"
        android:textColor="@color/white"
        android:textSize="22dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="45dp"/>
    
    <TextView android:id="@+id/textViewDescription"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:text="@string/adress_buildg"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="78dp"
        android:textSize="20dp"/>

</FrameLayout>